--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.2",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-avatar": "2.0.0-alpha1",
     "@vaadin/vaadin-board": "3.0.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-charts": "8.0.1",
@@ -21,6 +23,7 @@
     "@vaadin/vaadin-crud": "2.0.0-alpha2",
     "@vaadin/vaadin-custom-field": "2.0.0-alpha1",
     "@vaadin/vaadin-date-picker": "5.0.0-alpha1",
+    "@vaadin/vaadin-date-time-picker": "2.0.0-alpha1",
     "@vaadin/vaadin-details": "1.2.0",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
@@ -45,44 +48,41 @@
     "@vaadin/vaadin-text-field": "3.0.0-alpha1",
     "@vaadin/vaadin-time-picker": "3.0.0-alpha1",
     "@vaadin/vaadin-upload": "5.0.0-alpha1",
-    "lit-element": "2.3.1",
-    "@vaadin/vaadin-date-time-picker": "2.0.0-alpha1",
-    "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-avatar": "2.0.0-alpha1"
+    "lit-element": "2.3.1"
   },
   "devDependencies": {
-    "webpack": "4.42.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
-    "webpack-merge": "4.2.2",
-    "raw-loader": "4.0.0",
-    "compression-webpack-plugin": "4.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "script-ext-html-webpack-plugin": "2.1.4",
-    "awesome-typescript-loader": "5.2.1",
-    "typescript": "4.0.3",
-    "terser": "4.6.7",
-    "progress-webpack-plugin": "0.0.24",
-    "lit-element": "2.3.1",
-    "chokidar": "^3.4.0",
-    "validator": "13.1.17",
-    "lit-html": "1.2.1",
     "@types/validator": "13.1.0",
+    "awesome-typescript-loader": "5.2.1",
+    "chokidar": "^3.4.0",
+    "compression-webpack-plugin": "4.0.1",
+    "construct-style-sheets-polyfill": "2.4.2",
+    "copy-webpack-plugin": "5.1.2",
     "css-loader": "4.2.1",
-    "lit-css-loader": "0.0.4",
+    "extra-watch-webpack-plugin": "1.0.3",
     "extract-loader": "5.1.0",
     "file-loader": "6.1.0",
-    "loader-utils": "1.4.0",
-    "construct-style-sheets-polyfill": "2.4.2",
-    "extra-watch-webpack-plugin": "1.0.3",
     "glob": "7.1.6",
-    "workbox-webpack-plugin": "5.1.4",
+    "html-webpack-plugin": "3.2.0",
     "idb": "5.0.6",
+    "lit-css-loader": "0.0.4",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1",
+    "loader-utils": "1.4.0",
+    "progress-webpack-plugin": "0.0.24",
+    "raw-loader": "4.0.0",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "terser": "4.6.7",
+    "typescript": "4.0.3",
+    "validator": "13.1.17",
+    "webpack": "4.42.0",
+    "webpack-babel-multi-target-plugin": "2.3.3",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "webpack-merge": "4.2.2",
     "workbox-core": "5.1.4",
     "workbox-precaching": "5.1.4",
-    "webpack-manifest-plugin": "2.2.0"
+    "workbox-webpack-plugin": "5.1.4"
   },
   "vaadin": {
     "dependencies": {
