--- a/package.json
+++ b/package.json
@@ -6,73 +6,73 @@
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.2",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-board": "2.2.0",
+    "@vaadin/vaadin-avatar": "2.0.0-alpha1",
+    "@vaadin/vaadin-board": "3.0.0",
     "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-charts": "7.0.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
-    "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-confirm-dialog": "1.3.0",
-    "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-cookie-consent": "1.2.0",
+    "@vaadin/vaadin-charts": "8.0.1",
+    "@vaadin/vaadin-checkbox": "3.0.0-alpha1",
+    "@vaadin/vaadin-combo-box": "6.0.0-alpha1",
+    "@vaadin/vaadin-confirm-dialog": "2.0.0",
+    "@vaadin/vaadin-context-menu": "5.0.0-alpha2",
+    "@vaadin/vaadin-cookie-consent": "2.0.0",
     "@vaadin/vaadin-core-shrinkwrap": "18.0.5",
-    "@vaadin/vaadin-crud": "1.3.0",
-    "@vaadin/vaadin-custom-field": "1.3.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-crud": "2.0.0-alpha2",
+    "@vaadin/vaadin-custom-field": "2.0.0-alpha1",
+    "@vaadin/vaadin-date-picker": "5.0.0-alpha1",
+    "@vaadin/vaadin-date-time-picker": "2.0.0-alpha1",
     "@vaadin/vaadin-details": "1.2.0",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-grid": "5.7.7",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
+    "@vaadin/vaadin-grid": "6.0.0-alpha1",
+    "@vaadin/vaadin-grid-pro": "3.0.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-item": "3.0.0-alpha1",
+    "@vaadin/vaadin-list-box": "2.0.0-alpha1",
+    "@vaadin/vaadin-login": "2.0.0-alpha1",
+    "@vaadin/vaadin-lumo-styles": "1.6.1",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
-    "@vaadin/vaadin-notification": "1.6.0",
+    "@vaadin/vaadin-menu-bar": "2.0.0-alpha1",
+    "@vaadin/vaadin-notification": "1.6.1",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-progress-bar": "1.3.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-rich-text-editor": "1.3.0",
-    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-rich-text-editor": "2.0.0-alpha2",
+    "@vaadin/vaadin-select": "3.0.0-alpha1",
     "@vaadin/vaadin-shrinkwrap": "18.0.5",
     "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-text-field": "2.8.2",
-    "@vaadin/vaadin-time-picker": "2.4.0",
-    "@vaadin/vaadin-upload": "4.4.1",
-    "lit-element": "2.3.1",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-avatar": "1.0.3"
+    "@vaadin/vaadin-tabs": "4.0.0-alpha4",
+    "@vaadin/vaadin-text-field": "3.0.0-alpha1",
+    "@vaadin/vaadin-time-picker": "3.0.0-alpha1",
+    "@vaadin/vaadin-upload": "5.0.0-alpha1",
+    "lit-element": "2.3.1"
   },
   "devDependencies": {
+    "@types/validator": "13.1.0",
+    "awesome-typescript-loader": "5.2.1",
+    "chokidar": "^3.4.0",
+    "compression-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "5.1.2",
+    "css-loader": "4.2.1",
+    "extract-loader": "5.1.0",
+    "html-webpack-plugin": "3.2.0",
+    "lit-css-loader": "0.0.4",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1",
+    "progress-webpack-plugin": "0.0.24",
+    "raw-loader": "4.0.0",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "terser": "4.6.7",
+    "typescript": "4.0.3",
+    "validator": "13.1.17",
     "webpack": "4.42.0",
+    "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
-    "webpack-merge": "4.2.2",
-    "raw-loader": "4.0.0",
-    "compression-webpack-plugin": "4.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "script-ext-html-webpack-plugin": "2.1.4",
-    "awesome-typescript-loader": "5.2.1",
-    "typescript": "4.0.3",
-    "terser": "4.6.7",
-    "progress-webpack-plugin": "0.0.24",
-    "lit-element": "2.3.1",
-    "chokidar": "^3.4.0",
-    "validator": "13.1.17",
-    "lit-html": "1.2.1",
-    "@types/validator": "13.1.0",
-    "css-loader": "4.2.1",
-    "lit-css-loader": "0.0.4",
-    "extract-loader": "5.1.0"
+    "webpack-merge": "4.2.2"
   },
   "vaadin": {
     "dependencies": {
