--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.2",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-avatar": "1.0.3",
     "@vaadin/vaadin-board": "2.2.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-charts": "7.0.0",
@@ -21,6 +21,7 @@
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-date-time-picker": "1.4.0",
     "@vaadin/vaadin-details": "1.2.0",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
@@ -45,107 +46,106 @@
     "@vaadin/vaadin-text-field": "2.8.2",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
-    "lit-element": "2.3.1",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-avatar": "1.0.3"
+    "lit-element": "2.3.1"
   },
   "devDependencies": {
+    "@types/validator": "13.1.0",
+    "awesome-typescript-loader": "5.2.1",
+    "chokidar": "^3.4.0",
+    "compression-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "5.1.2",
+    "css-loader": "4.2.1",
+    "extract-loader": "5.1.0",
+    "html-webpack-plugin": "3.2.0",
+    "lit-css-loader": "0.0.4",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1",
+    "progress-webpack-plugin": "0.0.24",
+    "raw-loader": "4.0.0",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "terser": "4.6.7",
+    "typescript": "4.0.3",
+    "validator": "13.1.17",
     "webpack": "4.42.0",
+    "webpack-babel-multi-target-plugin": "2.3.3",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
-    "webpack-merge": "4.2.2",
-    "raw-loader": "4.0.0",
-    "compression-webpack-plugin": "4.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "script-ext-html-webpack-plugin": "2.1.4",
-    "awesome-typescript-loader": "5.2.1",
-    "typescript": "4.0.3",
-    "terser": "4.6.7",
-    "progress-webpack-plugin": "0.0.24",
-    "lit-element": "2.3.1",
-    "chokidar": "^3.4.0",
-    "validator": "13.1.17",
-    "lit-html": "1.2.1",
-    "@types/validator": "13.1.0",
-    "css-loader": "4.2.1",
-    "lit-css-loader": "0.0.4",
-    "extract-loader": "5.1.0"
+    "webpack-merge": "4.2.2"
   },
+  "license": "UNLICENSED",
+  "name": "no-name",
   "vaadin": {
     "dependencies": {
-      "@vaadin/router": "1.7.2",
+      "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-grid": "5.7.7",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-split-layout": "4.3.0",
+      "@vaadin/router": "1.7.2",
+      "@vaadin/vaadin-accordion": "1.2.0",
+      "@vaadin/vaadin-app-layout": "2.2.0",
+      "@vaadin/vaadin-avatar": "1.0.3",
+      "@vaadin/vaadin-board": "2.2.0",
+      "@vaadin/vaadin-button": "2.4.0",
+      "@vaadin/vaadin-charts": "7.0.0",
+      "@vaadin/vaadin-checkbox": "2.5.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
+      "@vaadin/vaadin-confirm-dialog": "1.3.0",
+      "@vaadin/vaadin-context-menu": "4.5.0",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
       "@vaadin/vaadin-core-shrinkwrap": "18.0.5",
-      "@vaadin/vaadin-upload": "4.4.1",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "2.4.0",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "2.3.0",
-      "@vaadin/vaadin-board": "2.2.0",
-      "@vaadin/vaadin-notification": "1.6.0",
-      "@vaadin/vaadin-charts": "7.0.0",
-      "@vaadin/vaadin-grid-pro": "2.2.2",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "18.0.5",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "1.2.0",
-      "@vaadin/vaadin-button": "2.4.0",
+      "@vaadin/vaadin-crud": "1.3.0",
+      "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.2",
-      "@vaadin/vaadin-menu-bar": "1.2.1",
-      "@vaadin/vaadin-form-layout": "2.3.0",
-      "@vaadin/vaadin-accordion": "1.2.0",
-      "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-confirm-dialog": "1.3.0",
-      "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.0",
+      "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-details": "1.2.0",
-      "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.4.0",
-      "@vaadin/vaadin-context-menu": "4.5.0",
-      "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
+      "@vaadin/vaadin-dialog": "2.5.2",
+      "@vaadin/vaadin-form-layout": "2.3.0",
+      "@vaadin/vaadin-grid": "5.7.7",
+      "@vaadin/vaadin-grid-pro": "2.2.2",
+      "@vaadin/vaadin-icons": "4.3.2",
+      "@vaadin/vaadin-item": "2.3.0",
+      "@vaadin/vaadin-list-box": "1.4.0",
+      "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-menu-bar": "1.2.1",
+      "@vaadin/vaadin-notification": "1.6.0",
+      "@vaadin/vaadin-ordered-layout": "1.4.0",
+      "@vaadin/vaadin-progress-bar": "1.3.0",
+      "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-rich-text-editor": "1.3.0",
-      "@vaadin/vaadin-custom-field": "1.3.0",
-      "@vaadin/vaadin-date-time-picker": "1.4.0",
-      "lit-element": "2.3.1",
-      "@vaadin/vaadin-avatar": "1.0.3"
+      "@vaadin/vaadin-select": "2.4.0",
+      "@vaadin/vaadin-shrinkwrap": "18.0.5",
+      "@vaadin/vaadin-split-layout": "4.3.0",
+      "@vaadin/vaadin-tabs": "3.2.0",
+      "@vaadin/vaadin-text-field": "2.8.2",
+      "@vaadin/vaadin-time-picker": "2.4.0",
+      "@vaadin/vaadin-upload": "4.4.1",
+      "@webcomponents/webcomponentsjs": "^2.2.10",
+      "lit-element": "2.3.1"
     },
     "devDependencies": {
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "5.1.2",
-      "compression-webpack-plugin": "4.0.1",
-      "raw-loader": "4.0.0",
-      "webpack-cli": "3.3.11",
-      "webpack": "4.42.0",
-      "html-webpack-plugin": "3.2.0",
-      "script-ext-html-webpack-plugin": "2.1.4",
-      "awesome-typescript-loader": "5.2.1",
-      "typescript": "4.0.3",
-      "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0",
-      "terser": "4.6.7",
-      "progress-webpack-plugin": "0.0.24",
-      "lit-element": "2.3.1",
-      "chokidar": "^3.4.0",
-      "validator": "13.1.17",
-      "lit-html": "1.2.1",
       "@types/validator": "13.1.0",
+      "awesome-typescript-loader": "5.2.1",
+      "chokidar": "^3.4.0",
+      "compression-webpack-plugin": "4.0.1",
+      "copy-webpack-plugin": "5.1.2",
       "css-loader": "4.2.1",
+      "extract-loader": "5.1.0",
+      "html-webpack-plugin": "3.2.0",
       "lit-css-loader": "0.0.4",
-      "extract-loader": "5.1.0"
+      "lit-element": "2.3.1",
+      "lit-html": "1.2.1",
+      "progress-webpack-plugin": "0.0.24",
+      "raw-loader": "4.0.0",
+      "script-ext-html-webpack-plugin": "2.1.4",
+      "terser": "4.6.7",
+      "typescript": "4.0.3",
+      "validator": "13.1.17",
+      "webpack": "4.42.0",
+      "webpack-babel-multi-target-plugin": "2.3.3",
+      "webpack-cli": "3.3.11",
+      "webpack-dev-server": "3.11.0",
+      "webpack-merge": "4.2.2"
     },
     "hash": "718ca03c816fe81daf69f8b8cc57177c98ed397a8351fca1c278d833b983cb38"
   }
