--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "progress-webpack-plugin": "0.0.24",
     "raw-loader": "4.0.0",
     "script-ext-html-webpack-plugin": "2.1.4",
+    "style-loader": "^2.0.0",
     "terser": "4.6.7",
     "typescript": "4.0.3",
     "validator": "13.1.17",
@@ -147,6 +148,6 @@
       "webpack-dev-server": "3.11.0",
       "webpack-merge": "4.2.2"
     },
-    "hash": "718ca03c816fe81daf69f8b8cc57177c98ed397a8351fca1c278d833b983cb38"
+    "hash": "6618d0d8d90413b621325183fb2074f97ba4b4954709412d86baa96a6a49046d"
   }
 }
