--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "no-name",
   "license": "UNLICENSED",
+  "name": "no-name",
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
@@ -73,6 +73,7 @@
     "script-ext-html-webpack-plugin": "2.1.4",
     "style-loader": "^2.0.0",
     "terser": "4.6.7",
+    "ts-loader": "8.0.12",
     "typescript": "4.0.3",
     "validator": "13.1.17",
     "webpack": "4.42.0",
@@ -83,92 +84,91 @@
     "webpack-merge": "4.2.2",
     "workbox-core": "5.1.4",
     "workbox-precaching": "5.1.4",
-    "workbox-webpack-plugin": "5.1.4",
-    "ts-loader": "8.0.12"
+    "workbox-webpack-plugin": "5.1.4"
   },
   "vaadin": {
     "dependencies": {
-      "@vaadin/router": "1.7.2",
+      "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "2.0.0-alpha2",
-      "@vaadin/vaadin-grid": "6.0.0-alpha1",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-split-layout": "4.3.0",
+      "@vaadin/router": "1.7.2",
+      "@vaadin/vaadin-accordion": "1.2.0",
+      "@vaadin/vaadin-app-layout": "2.2.0",
+      "@vaadin/vaadin-avatar": "2.0.0-alpha1",
+      "@vaadin/vaadin-board": "3.0.0",
+      "@vaadin/vaadin-button": "2.4.0",
+      "@vaadin/vaadin-charts": "8.0.1",
+      "@vaadin/vaadin-checkbox": "3.0.0-alpha1",
       "@vaadin/vaadin-combo-box": "6.0.0-alpha1",
+      "@vaadin/vaadin-confirm-dialog": "2.0.0",
+      "@vaadin/vaadin-context-menu": "5.0.0-alpha2",
       "@vaadin/vaadin-cookie-consent": "2.0.0",
       "@vaadin/vaadin-core-shrinkwrap": "19.0.0-alpha5",
-      "@vaadin/vaadin-upload": "5.0.0-alpha1",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "3.0.0-alpha1",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "3.0.0-alpha1",
-      "@vaadin/vaadin-board": "3.0.0",
-      "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-charts": "8.0.1",
-      "@vaadin/vaadin-grid-pro": "3.0.0-alpha1",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "19.0.0-alpha5",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "2.0.0-alpha1",
-      "@vaadin/vaadin-button": "2.4.0",
+      "@vaadin/vaadin-crud": "2.0.0-alpha2",
+      "@vaadin/vaadin-custom-field": "2.0.0-alpha1",
       "@vaadin/vaadin-date-picker": "5.0.0-alpha1",
-      "@vaadin/vaadin-text-field": "3.0.0-alpha1",
-      "@vaadin/vaadin-menu-bar": "2.0.0-alpha1",
-      "@vaadin/vaadin-form-layout": "2.3.0",
-      "@vaadin/vaadin-accordion": "1.2.0",
-      "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-confirm-dialog": "2.0.0",
-      "@vaadin/vaadin-list-box": "2.0.0-alpha1",
-      "@vaadin/vaadin-checkbox": "3.0.0-alpha1",
+      "@vaadin/vaadin-date-time-picker": "2.0.0-alpha1",
       "@vaadin/vaadin-details": "1.2.0",
-      "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "3.0.0-alpha1",
-      "@vaadin/vaadin-context-menu": "5.0.0-alpha2",
-      "@vaadin/vaadin-tabs": "4.0.0-alpha4",
-      "@vaadin/vaadin-radio-button": "1.5.1",
+      "@vaadin/vaadin-dialog": "2.5.2",
+      "@vaadin/vaadin-form-layout": "2.3.0",
+      "@vaadin/vaadin-grid": "6.0.0-alpha1",
+      "@vaadin/vaadin-grid-pro": "3.0.0-alpha1",
+      "@vaadin/vaadin-icons": "4.3.2",
+      "@vaadin/vaadin-item": "3.0.0-alpha1",
+      "@vaadin/vaadin-list-box": "2.0.0-alpha1",
+      "@vaadin/vaadin-login": "2.0.0-alpha1",
       "@vaadin/vaadin-lumo-styles": "1.6.1",
       "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-menu-bar": "2.0.0-alpha1",
+      "@vaadin/vaadin-notification": "1.6.1",
+      "@vaadin/vaadin-ordered-layout": "1.4.0",
+      "@vaadin/vaadin-progress-bar": "1.3.0",
+      "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-rich-text-editor": "2.0.0-alpha2",
-      "@vaadin/vaadin-custom-field": "2.0.0-alpha1",
-      "@vaadin/vaadin-date-time-picker": "2.0.0-alpha1",
-      "lit-element": "2.3.1",
-      "@vaadin/vaadin-avatar": "2.0.0-alpha1"
+      "@vaadin/vaadin-select": "3.0.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "19.0.0-alpha5",
+      "@vaadin/vaadin-split-layout": "4.3.0",
+      "@vaadin/vaadin-tabs": "4.0.0-alpha4",
+      "@vaadin/vaadin-text-field": "3.0.0-alpha1",
+      "@vaadin/vaadin-time-picker": "3.0.0-alpha1",
+      "@vaadin/vaadin-upload": "5.0.0-alpha1",
+      "@webcomponents/webcomponentsjs": "^2.2.10",
+      "lit-element": "2.3.1"
     },
     "devDependencies": {
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "5.1.2",
-      "compression-webpack-plugin": "4.0.1",
-      "raw-loader": "4.0.0",
-      "webpack-cli": "3.3.11",
-      "webpack": "4.42.0",
-      "html-webpack-plugin": "4.5.1",
-      "script-ext-html-webpack-plugin": "2.1.4",
-      "awesome-typescript-loader": "5.2.1",
-      "typescript": "4.0.3",
-      "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0",
-      "terser": "4.6.7",
-      "progress-webpack-plugin": "0.0.24",
-      "lit-element": "2.3.1",
-      "chokidar": "^3.5.0",
-      "validator": "13.1.17",
-      "lit-html": "1.2.1",
       "@types/validator": "13.1.0",
+      "awesome-typescript-loader": "5.2.1",
+      "chokidar": "^3.5.0",
+      "compression-webpack-plugin": "4.0.1",
+      "construct-style-sheets-polyfill": "2.4.6",
+      "copy-webpack-plugin": "5.1.2",
       "css-loader": "4.2.1",
-      "lit-css-loader": "0.0.4",
+      "extra-watch-webpack-plugin": "1.0.3",
       "extract-loader": "5.1.0",
       "file-loader": "6.1.0",
-      "loader-utils": "1.4.0",
-      "construct-style-sheets-polyfill": "2.4.6",
-      "extra-watch-webpack-plugin": "1.0.3",
       "glob": "7.1.6",
-      "workbox-webpack-plugin": "5.1.4",
+      "html-webpack-plugin": "4.5.1",
       "idb": "5.0.6",
+      "lit-css-loader": "0.0.4",
+      "lit-element": "2.3.1",
+      "lit-html": "1.2.1",
+      "loader-utils": "1.4.0",
+      "progress-webpack-plugin": "0.0.24",
+      "raw-loader": "4.0.0",
+      "script-ext-html-webpack-plugin": "2.1.4",
+      "terser": "4.6.7",
+      "ts-loader": "8.0.12",
+      "typescript": "4.0.3",
+      "validator": "13.1.17",
+      "webpack": "4.42.0",
+      "webpack-babel-multi-target-plugin": "2.3.3",
+      "webpack-cli": "3.3.11",
+      "webpack-dev-server": "3.11.0",
+      "webpack-manifest-plugin": "2.2.0",
+      "webpack-merge": "4.2.2",
       "workbox-core": "5.1.4",
       "workbox-precaching": "5.1.4",
-      "webpack-manifest-plugin": "2.2.0",
-      "ts-loader": "8.0.12"
+      "workbox-webpack-plugin": "5.1.4"
     },
     "hash": "b3e588e42432800bfb7b6d8a26068bdcf86aa7f0c15169a5f26e3450391bb35e"
   }
