--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lit-element": "2.3.1",
     "lit-html": "1.2.1",
     "loader-utils": "1.4.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "8.0.12",
     "typescript": "4.0.3",
     "validator": "13.1.17",
