--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha1",
+      "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha2",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -23,7 +23,7 @@
       "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-grid-pro": "2.2.2",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha2",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -58,9 +58,11 @@
       "webpack": "4.42.0",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0"
+      "webpack-dev-server": "3.11.0",
+      "ts-loader": "8.0.12",
+      "typescript": "4.0.3"
     },
-    "hash": "37b1df134a91b3109eb6ee114182464e37ae4eebe9716f3975bcbf0dd7ea1272"
+    "hash": "5fcc31f99320da3a86059d39ebffd564f069d4291ffe15abdeeb11dba4245700"
   },
   "dependencies": {
     "lit-element": "^2.2.1",
@@ -72,7 +74,7 @@
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-combo-box": "5.4.7",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha1",
+    "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha2",
     "@vaadin/vaadin-upload": "4.4.1",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-select": "2.4.0",
@@ -83,7 +85,7 @@
     "@vaadin/vaadin-notification": "1.6.1",
     "@vaadin/vaadin-grid-pro": "2.2.2",
     "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha1",
+    "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha2",
     "@vaadin/vaadin-date-time-picker": "1.4.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
@@ -118,6 +120,8 @@
     "webpack": "4.42.0",
     "chokidar": "^3.5.0",
     "webpack-merge": "4.2.2",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "ts-loader": "8.0.12",
+    "typescript": "4.0.3"
   }
 }
