--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "UNLICENSED",
   "name": "no-name",
   "dependencies": {
+    "@adobe/lit-mobx": "^1.0.1",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
@@ -48,7 +49,8 @@
     "@vaadin/vaadin-text-field": "3.0.0-alpha1",
     "@vaadin/vaadin-time-picker": "3.0.0-alpha1",
     "@vaadin/vaadin-upload": "5.0.0-alpha1",
-    "lit-element": "2.3.1"
+    "lit-element": "2.3.1",
+    "mobx": "^6.1.5"
   },
   "devDependencies": {
     "@types/validator": "13.1.0",
