--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "experimentalDecorators": true,
     "baseUrl": "frontend",
     "paths": {
