--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-grid": "5.7.7",
+      "@vaadin/vaadin-grid": "5.7.9",
       "@vaadin/vaadin-icons": "4.3.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha3",
+      "@vaadin/vaadin-core-shrinkwrap": "14.5.0-beta1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -23,13 +23,13 @@
       "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-grid-pro": "2.2.2",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha3",
+      "@vaadin/vaadin-shrinkwrap": "14.5.0-beta1",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.2",
+      "@vaadin/vaadin-text-field": "2.8.3",
       "@vaadin/vaadin-menu-bar": "1.2.1",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
@@ -62,66 +62,66 @@
       "ts-loader": "8.0.12",
       "typescript": "4.0.3"
     },
-    "hash": "b8af769020026356d4323d01bae4a70425e6171f8afb7ae42ecbd169f76d73a6"
+    "hash": "4896fa1d7c84bf303453536743853c6a057cccd9ce9b61b16737d902c83b803a"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
-    "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/vaadin-crud": "1.3.0",
-    "@vaadin/vaadin-grid": "5.7.7",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.5.0-alpha3",
-    "@vaadin/vaadin-upload": "4.4.1",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-board": "2.2.0",
-    "@vaadin/vaadin-charts": "6.3.1",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-shrinkwrap": "14.5.0-alpha3",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.2",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
-    "@vaadin/vaadin-custom-field": "1.3.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-confirm-dialog": "1.3.0",
-    "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
-    "@vaadin/vaadin-details": "1.2.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.4.0",
+    "@polymer/iron-list": "3.1.0",
+    "@polymer/polymer": "3.2.0",
+    "@vaadin/vaadin-accordion": "1.2.0",
+    "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-avatar": "1.0.3",
+    "@vaadin/vaadin-board": "2.2.0",
+    "@vaadin/vaadin-button": "2.4.0",
+    "@vaadin/vaadin-charts": "6.3.1",
+    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-combo-box": "5.4.7",
+    "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-tabs": "3.2.0",
+    "@vaadin/vaadin-cookie-consent": "1.2.0",
+    "@vaadin/vaadin-core-shrinkwrap": "14.5.0-beta1",
+    "@vaadin/vaadin-crud": "1.3.0",
+    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-date-time-picker": "1.4.0",
+    "@vaadin/vaadin-details": "1.2.0",
+    "@vaadin/vaadin-dialog": "2.5.2",
+    "@vaadin/vaadin-form-layout": "2.3.0",
+    "@vaadin/vaadin-grid": "5.7.9",
+    "@vaadin/vaadin-grid-pro": "2.2.2",
+    "@vaadin/vaadin-icons": "4.3.2",
+    "@vaadin/vaadin-item": "2.3.0",
+    "@vaadin/vaadin-list-box": "1.4.0",
+    "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-menu-bar": "1.2.1",
+    "@vaadin/vaadin-notification": "1.6.1",
+    "@vaadin/vaadin-ordered-layout": "1.4.0",
+    "@vaadin/vaadin-progress-bar": "1.3.0",
+    "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
-    "@vaadin/vaadin-avatar": "1.0.3"
+    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-shrinkwrap": "14.5.0-beta1",
+    "@vaadin/vaadin-split-layout": "4.3.0",
+    "@vaadin/vaadin-tabs": "3.2.0",
+    "@vaadin/vaadin-text-field": "2.8.3",
+    "@vaadin/vaadin-time-picker": "2.4.0",
+    "@vaadin/vaadin-upload": "4.4.1",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
-    "compression-webpack-plugin": "4.0.1",
-    "raw-loader": "3.1.0",
-    "webpack-cli": "3.3.11",
-    "webpack": "4.42.0",
     "chokidar": "^3.5.0",
-    "webpack-merge": "4.2.2",
-    "webpack-dev-server": "3.11.0",
+    "compression-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "5.1.2",
+    "raw-loader": "3.1.0",
     "ts-loader": "8.0.12",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "webpack": "4.42.0",
+    "webpack-babel-multi-target-plugin": "2.3.3",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.11.0",
+    "webpack-merge": "4.2.2"
   }
 }
