--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.5.0-beta1",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -21,16 +21,16 @@
       "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-charts": "6.3.1",
       "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-grid-pro": "2.2.2",
+      "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.5.0-beta1",
+      "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha1",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.3",
-      "@vaadin/vaadin-menu-bar": "1.2.1",
+      "@vaadin/vaadin-text-field": "2.8.4",
+      "@vaadin/vaadin-menu-bar": "1.2.2",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-confirm-dialog": "1.3.0",
@@ -47,7 +47,7 @@
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.3.0",
-      "@vaadin/vaadin-avatar": "1.0.3"
+      "@vaadin/vaadin-avatar": "1.0.4"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -60,9 +60,15 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.11.0",
       "ts-loader": "8.0.12",
-      "typescript": "4.0.3"
+      "typescript": "4.0.3",
+      "css-loader": "4.2.1",
+      "file-loader": "6.1.0",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "lit-css-loader": "0.0.4",
+      "construct-style-sheets-polyfill": "2.4.6",
+      "extract-loader": "5.1.0"
     },
-    "hash": "4896fa1d7c84bf303453536743853c6a057cccd9ce9b61b16737d902c83b803a"
+    "hash": "b5ef902ff5d12122fe1d4f39c0852b5d1fdc23e5727ef1b15e75dc1da18ecfff"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -70,7 +76,7 @@
     "@polymer/polymer": "3.2.0",
     "@vaadin/vaadin-accordion": "1.2.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-avatar": "1.0.3",
+    "@vaadin/vaadin-avatar": "1.0.4",
     "@vaadin/vaadin-board": "2.2.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-charts": "6.3.1",
@@ -79,7 +85,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.5.0-beta1",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha1",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -88,24 +94,24 @@
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-grid": "5.7.9",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
+    "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-list-box": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
+    "@vaadin/vaadin-menu-bar": "1.2.2",
     "@vaadin/vaadin-notification": "1.6.1",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-progress-bar": "1.3.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.5.0-beta1",
+    "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha1",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-text-field": "2.8.3",
+    "@vaadin/vaadin-text-field": "2.8.4",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
@@ -114,7 +120,13 @@
   "devDependencies": {
     "chokidar": "^3.5.0",
     "compression-webpack-plugin": "4.0.1",
+    "construct-style-sheets-polyfill": "2.4.6",
     "copy-webpack-plugin": "5.1.2",
+    "css-loader": "4.2.1",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "extract-loader": "5.1.0",
+    "file-loader": "6.1.0",
+    "lit-css-loader": "0.0.4",
     "raw-loader": "3.1.0",
     "ts-loader": "8.0.12",
     "typescript": "4.0.3",
